tdf#104085 Replace number format code literal with ooxml enumeration.

Liberals of Number format code (NFC) were no longer recognized
by dmapper after it had been removed in
d30a8ec448bcd08c6a52a37d6ae41a4b71c235da.

Replace them with enumeration.

Change-Id: I3ed1e09d9f3987fce95bd708b9c0b0568d3f15f9
Reviewed-on: https://gerrit.libreoffice.org/32527
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Mark Hung <marklh9@gmail.com>